--- a/src/CSS/navbarWeb.css
+++ b/src/CSS/navbarWeb.css
@@ -15,3 +15,19 @@
   .navbar .contact {
     float: left;
     margin-left: 0; }
+
+@media (max-width: 576px) {
+  .navbar {
+    top: 650px;
+    border-radius: 10px;
+    background-color: #6D9C75;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 0px 20px;
+    box-sizing: border-box; }
+    .navbar svg {
+      height: 25px;
+      margin-top: 7.5px; }
+      .navbar svg path {
+        fill: white; } }
